feat(fichajes): actualizado controller para poder ver los fichajes abiertos de los usuarios.